Refactor: Routes for group specific vocab activation (#94)
* refactor: getGroups route to return staged

* refactor: get group vocabs staged flag

* refactor: conditional if in where query

* feat: updated query route for custom learning

* fix: groupId specific filtering

* feat: optional onlyActivated prop for routes

* fix: query routes for custom learning

* docs: updated swagger

* fix: random vocab return for custom learning

* docs: updated comment

* lint: if query

---------
