# app/Controllers/VocabularyController.js
@@ -50,8 +50,9 @@ const sendGroupVocabulary = catchAsync(async (req, res) => {
   const userId = req.user.id;
   const { groupId } = req.params;
   const { search } = req.query;
+  const onlyStaged = (req.query.onlyStaged || false) === 'true';
 
-  const vocabulary = await getGroupVocabulary(userId, groupId, search);
+  const vocabulary = await getGroupVocabulary(userId, groupId, search, onlyStaged);
 
   res.send(vocabulary);
 });
